changes in index.html

--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@ Welcome to my first page
 Hello World Welcome to my first page.<br>
 Thank you and keep checking on for updates.<br><br>
 You can move to Second page by clicking <a href="second.html">here</a>
+You can move to Third page by clicking <a href="third.html">here</a>
+
 </body>
 </html>
